--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+# NOTICE:
+
+This repo is no longer maintained - please use https://github.com/airbrake/gobrake instead!
+
+
+
+
+
 Config
 ======
 
